--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=8080
-SERV_URL=http://localhost:8080
-
-DB_LOCAL_DBNAME=instock
-DB_LOCAL_USER=username   
-DB_LOCAL_PASSWORD=password
+DB_HOST=127.0.0.1
+DB_NAME=instock
+DB_USER=root
+DB_PASSWORD=rootroot
